[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/level/level.tscn" type="PackedScene" id=2]
[ext_resource path="res://game.gd" type="Script" id=3]
[ext_resource path="res://src/UI/ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/UIInventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://Control.gd" type="Script" id=6]
[ext_resource path="res://test3-mega.ogg" type="AudioStream" id=7]
[ext_resource path="res://src/UI/UIQuest.tscn" type="PackedScene" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=2]
radius = 63.0

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[sub_resource type="CircleShape2D" id=4]
radius = 40.0

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.482353, 0.372549, 0.470588, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5

[node name="game" type="Node"]
script = ExtResource( 3 )

[node name="level" parent="." instance=ExtResource( 2 )]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 734, 323 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 6 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="UI/Control"]
position = Vector2( 1159, 666 )
scale = Vector2( 2.04688, 1.84375 )
normal = ExtResource( 9 )
pressed = ExtResource( 9 )
shape = SubResource( 2 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="TouchScreenButton6" type="TouchScreenButton" parent="UI/Control"]
position = Vector2( 139, 245 )
scale = Vector2( 2.04688, 1.84375 )
normal = ExtResource( 9 )
pressed = ExtResource( 9 )
shape = SubResource( 2 )
passby_press = true
action = "pickup"
visibility_mode = 1

[node name="TouchScreenButton4" type="TouchScreenButton" parent="UI/Control"]
position = Vector2( 609, 466 )
scale = Vector2( 2.04688, 1.84375 )
normal = ExtResource( 9 )
pressed = ExtResource( 9 )
shape = SubResource( 2 )
passby_press = true
action = "move_up"
visibility_mode = 1

[node name="TouchScreenButton2" type="TouchScreenButton" parent="UI/Control"]
position = Vector2( 95, 690 )
scale = Vector2( 1.6875, 1.67188 )
normal = ExtResource( 9 )
pressed = ExtResource( 9 )
shape = SubResource( 3 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="TouchScreenButton3" type="TouchScreenButton" parent="UI/Control"]
position = Vector2( 622, 722 )
scale = Vector2( 1.6875, 1.67188 )
normal = ExtResource( 9 )
pressed = ExtResource( 9 )
shape = SubResource( 4 )
passby_press = true
action = "jump"
visibility_mode = 1

[node name="TouchScreenButton5" type="TouchScreenButton" parent="UI/Control"]
position = Vector2( 626, 899 )
scale = Vector2( 1.6875, 1.67188 )
normal = ExtResource( 9 )
pressed = ExtResource( 9 )
shape = SubResource( 4 )
passby_press = true
action = "move_down"
visibility_mode = 1

[node name="DialogueUI" type="ColorRect" parent="UI/Control"]
visible = false
self_modulate = Color( 0, 0, 0, 0.341176 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WorldUI" type="VBoxContainer" parent="UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = 2.0
margin_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/WorldUI"]
margin_right = 1920.0
margin_bottom = 1026.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Info" parent="UI/Control/WorldUI/HBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 842.0
margin_top = 912.0
margin_right = 958.0
margin_bottom = 1026.0
size_flags_horizontal = 10
size_flags_vertical = 10

[node name="Quest" parent="UI/Control/WorldUI/HBoxContainer" instance=ExtResource( 8 )]
visible = false

[node name="Inventory" type="MarginContainer" parent="UI/Control/WorldUI/HBoxContainer"]
margin_left = 1380.0
margin_top = 201.0
margin_right = 1920.0
margin_bottom = 1026.0
size_flags_horizontal = 10
size_flags_vertical = 8
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="UIInventory" parent="UI/Control/WorldUI/HBoxContainer/Inventory" instance=ExtResource( 5 )]
margin_left = 40.0
margin_top = 40.0
margin_right = 500.0
margin_bottom = 785.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="UI/Control/WorldUI"]
margin_top = 1030.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/WorldUI/PanelContainer"]
margin_left = 1495.0
margin_right = 1920.0
margin_bottom = 50.0
size_flags_horizontal = 8
size_flags_vertical = 2

[node name="journal" type="Button" parent="UI/Control/WorldUI/PanelContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 50.0
focus_mode = 0
text = "Journal"

[node name="info" type="Button" parent="UI/Control/WorldUI/PanelContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 274.0
margin_bottom = 50.0
focus_mode = 0
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Character"

[node name="inventory" type="Button" parent="UI/Control/WorldUI/PanelContainer/HBoxContainer"]
margin_left = 278.0
margin_right = 425.0
margin_bottom = 50.0
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Inventory"

[node name="ContextCast" type="RayCast2D" parent="."]
position = Vector2( -23, 0 )
cast_to = Vector2( 10, 10 )
collision_mask = 51

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )

[connection signal="port_request" from="player" to="." method="_on_player_port_request"]
[connection signal="gui_input" from="UI/Control" to="UI/Control" method="_on_Control_gui_input"]
[connection signal="pressed" from="UI/Control/TouchScreenButton2" to="UI/Control" method="_on_TouchScreenButton2_pressed"]
[connection signal="context_menu" from="UI/Control/WorldUI/HBoxContainer/Inventory/UIInventory" to="UI/Control" method="_on_UIInventory_context_menu"]
[connection signal="item_activated" from="UI/Control/WorldUI/HBoxContainer/Inventory/UIInventory" to="UI/Control/WorldUI/HBoxContainer/Inventory/UIInventory" method="_on_UIInventory_item_activated"]
[connection signal="pressed" from="UI/Control/WorldUI/PanelContainer/HBoxContainer/journal" to="UI/Control" method="_on_journal_pressed"]
[connection signal="pressed" from="UI/Control/WorldUI/PanelContainer/HBoxContainer/info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="UI/Control/WorldUI/PanelContainer/HBoxContainer/inventory" to="." method="_on_inventory_pressed"]
